--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,27 @@
 <!Doctype html>
 <html>
     <head>
-
+        <title>Chat App</title>
+        <link rel="stylesheet" href="/css/styles.min.css">
+        <link rel="icon" href="/img/icon.jpg">
     </head>
 
     <body>
-        Chat App
-        <button id="increment">+1</button>
-        <script src="socket.io/socket.io.js"></script>
-        <script src="js/chat.js"></script>
+       <div class="centered-form">
+            <div class="centered-form__box">
+                <h1>Join</h1>
+                <form action="/chat.html">
+                    
+                    <label>User Name</label>
+                    <input type="text" name="username"  required>
+                    
+                    <label>Room</label>
+                    <input type="text" name="room"  required>
+
+                    <button>Join Chat</button>
+                </form>
+            </div>
+       </div>
     </body>
 
 </html> 
