--- a/public/chat.html
+++ b/public/chat.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="chat">
-            <div class="chat__sidebar">
+            <div id="sidebar" class="chat__sidebar">
 
             </div>
 
@@ -18,7 +18,7 @@
                 
                 <div class="compose">
                     <form id="message-form">
-                        <input name="message" placeholder="Message">
+                        <input name="message" placeholder="Message" required autocomplete="off">
                         <button>Send</button>
                     </form>
                     <button id="send-location">Send Location</button> 
@@ -30,7 +30,7 @@
         <script id="message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message__name">UserName</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p>{{message}} </p>
@@ -40,11 +40,23 @@
         <script id="location-message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message__name">UserName</span>
+                    <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p><a href="{{url}}" target="_blank"> My current location</a></p>
             </div>
+        </script>
+
+        <script id="sidebar-template" type="text/html">
+            <h2 class="room-title">{{room}}</h2> 
+            <h2 class="list-title">Users</h2>
+
+            <ul class="users"> 
+                {{#users}} 
+                    <li>{{username}}</li>
+                {{/users}}
+            </ul>
+        
         </script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
